--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,18 @@ liboofcanvas.so
 gtktester
 gtktester2
 canvastest
+SRC/SWIG/*
+build
+OOFSWIG/Makefile
+OOFSWIG/*/Makefile
+OOFSWIG/Makefile.template
+OOFSWIG/config.log
+OOFSWIG/config.status
+OOFSWIG/swig_lib/python/Makefile
+OOFSWIG/libswig.a
+OOFSWIG/swig.x
+OOFSWIG/SWIG/parser.cxx
+OOFSWIG/SWIG/parser.h
+OOFSWIG/SWIG/y.tab.c
+OOFSWIG/SWIG/y.tab.h
+OOFSWIG/Tests/*
