--- a/oofcanvas.pc.in
+++ b/oofcanvas.pc.in
@@ -7,7 +7,7 @@ prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 includedir=${prefix}/include/@PROJECT_NAME@
-Cflags: -I${includedir} @PKG_CONFIG_CFLAGS@
+Cflags: -I${includedir} -I@PYINCL@ @PKG_CONFIG_CFLAGS@
 Libs: -L${libdir} -loofcanvas -loofcanvasGUI
 
 Requires: gtk+-3.0 >= @GTK3_MIN_VERSION@, Magick++ >= @MAGICK_MIN_VERSION@
