Tried moving all dependencies from Required: to Required.private.
oof2 is using -I flags from the oofcanvas requirements, but I don't
think it should be.  I'm committing the current versions to test
on Linux.

--- a/oofcanvas.pc.in
+++ b/oofcanvas.pc.in
@@ -7,8 +7,8 @@ prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 includedir=${prefix}/include/@PROJECT_NAME@
+
 Cflags: -I${includedir} -I@PYINCL@ @PKG_CONFIG_CFLAGS@
 Libs: -L${libdir} -loofcanvas -loofcanvasGUI
 
-Requires: gtk+-3.0 >= @GTK3_MIN_VERSION@, Magick++ >= @MAGICK_MIN_VERSION@
-Requires.private: cairomm-1.0 >= @CAIRO_MIN_VERSION@, pango >= @PANGO_MIN_VERSION@, pangocairo >= @PANGOCAIRO_MIN_VERSION@
+Requires.private: cairomm-1.0 >= @CAIRO_MIN_VERSION@, pango >= @PANGO_MIN_VERSION@, pangocairo >= @PANGOCAIRO_MIN_VERSION@, gtk+-3.0 >= @GTK3_MIN_VERSION@, Magick++ >= @MAGICK_MIN_VERSION@
