Changes for compatibility with OOF2.
CMakeLists.txt no longer sets SWIG_TYPE_TABLE.  OOF2 and OOFCanvas
need to use the same value, if OOF2 is going to be able to use
OOFCanvas types, so now neither sets it.

Added direct access from python to the Color components, as part
of an attempt to avoid having to remove SWIG_TYPE_TABLE.

Deleted some old commented-out lines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,7 +299,7 @@ if(NOT (${PYTHON_API} STREQUAL None))
   pkg_check_modules(
     PYGOBJECT REQUIRED
     pygobject-3.0>${PYGOBJECT_MIN_VERSION})
-  add_compile_definitions(SWIG_TYPE_TABLE=oofcanvas)
+  # add_compile_definitions(SWIG_TYPE_TABLE=oofcanvas)
 endif()
 
 if(${OOFCANVAS_USE_IMAGEMAGICK})
